--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
     <title>Tomasz Baran - Recruitment task</title>
 </head>
 <body>
-
+<main>
+    <figure class="leftSide">
+        <img src="images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_ar_4_3,c_fill,g_auto__c_scale,w_694.jpg" alt="sea with sun image"/>
+    </figure>
+    <section class="rightSide">
+        <h1>Lorem Ipsum</h1>
+        <p>Infinitely scalable, feature-rich and cloud-native data management and protection for modern and legacy infrastructures and SaaS platforms, managed via a single app with no hardware required.</p>
+        <button class="alertButton">Button</button>
+    </section>
+</main>
 </body>
