--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 <body>
 <main>
     <figure class="leftSide">
-        <img src="images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_ar_4_3,c_fill,g_auto__c_scale,w_694.jpg" alt="sea with sun image"/>
+        <img src="images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_c_scale,w_480.jpg" alt="sea with sun picture"/>
     </figure>
     <section class="rightSide">
-        <h1>Lorem Ipsum</h1>
-        <p>Infinitely scalable, feature-rich and cloud-native data management and protection for modern and legacy infrastructures and SaaS platforms, managed via a single app with no hardware required.</p>
-        <button class="alertButton">Button</button>
+        <section class="centerRightSide">
+            <h1>Lorem Ipsum</h1>
+            <p>Infinitely scalable, feature-rich and cloud-native data management and protection for modern and legacy infrastructures and SaaS platforms, managed via a single app with no hardware required.</p>
+            <button class="modalButton">Button</button>
+        </section>
     </section>
 </main>
 </body>
