Working modal pop-up. Modal styles- in progress

--- a/index.html
+++ b/index.html
@@ -16,8 +16,18 @@
         <section class="centerRightSide">
             <h1>Lorem Ipsum</h1>
             <p>Infinitely scalable, feature-rich and cloud-native data management and protection for modern and legacy infrastructures and SaaS platforms, managed via a single app with no hardware required.</p>
-            <button class="modalButton">Button</button>
+            <button class="modalButton" id="modalButton">Button</button>
         </section>
     </section>
 </main>
+
+<section class="modalSection" id="modal">
+    <section class="modalContent">
+        <h2 class="closeModal" id="closeModal">&times;</h2>
+        <h1>Alert!</h1>
+        <p>You have clicked <span> X times </span> to related button.</p>
+    </section>
+</section>
+
+<script type="text/javascript" src="dist/all.js"></script>
 </body>
