Page styles and script improvements

--- a/index.html
+++ b/index.html
@@ -9,22 +9,24 @@
 </head>
 <body>
 <main>
-    <figure class="leftSide">
-        <img src="images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_c_scale,w_480.jpg" alt="sea with sun picture"/>
-    </figure>
-    <section class="rightSide">
-        <section class="centerRightSide">
-            <h1>Lorem Ipsum</h1>
-            <p>Infinitely scalable, feature-rich and cloud-native data management and protection for modern and legacy infrastructures and SaaS platforms, managed via a single app with no hardware required.</p>
-            <button class="modalButton" id="modalButton">Button</button>
+    <section class="mainPage">
+        <figure class="leftSide">
+            <img src="images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_c_scale,w_480.jpg" alt="sea with sun picture"/>
+        </figure>
+        <section class="rightSide">
+            <section class="centerRightSide">
+                <h1>Lorem Ipsum</h1>
+                <p>Infinitely scalable, feature-rich and cloud-native data management and protection for modern and legacy infrastructures and SaaS platforms, managed via a single app with no hardware required.</p>
+                <button class="modalButton" id="modalButton">Button</button>
+            </section>
         </section>
     </section>
 </main>
 
 <section class="modalSection" id="modal">
     <section class="modalContent">
-        <h2 class="closeModal" id="closeModal">&times;</h2>
-        <h1>Alert!</h1>
+        <h3 class="closeModal" id="closeModal">&times;</h3>
+        <h2>Alert!</h2>
         <p>You have clicked <span> X times </span> to related button.</p>
     </section>
 </section>
