Centered modal and improved  functions

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                 <button type="button" class="styledButton" id="modalButton">Button</button>
             </div>
         </div>
-    </section>
-    <section class="modalSection" id="modal">
-        <div class="modalContent">
-            <h3 class="closeModal" id="closeModal">&times;</h3>
-            <h2>Alert!</h2>
-            <p id="outputText"></p>
-            <button type="button" class="styledButton resetButton" id="resetClicks">Reset</button>
+        <div class="modalSection" id="modal">
+            <div class="modalContent">
+                <h3 class="closeModal" id="closeModal">&times;</h3>
+                <h2>Alert!</h2>
+                <p id="outputText"></p>
+                <button type="button" class="styledButton resetButton" id="resetClicks">Reset</button>
+            </div>
         </div>
     </section>
 </main>
