Added responsiveness to main page

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
 <main>
     <section class="mainPage">
-        <figure class="leftSide">
-            <img src="images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_c_scale,w_480.jpg" alt="sea with sun picture"/>
-        </figure>
+        <picture>
+            <source media="(max-width: 992px)" srcset="images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_c_scale,w_480.jpg">
+            <img src="images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_c_scale,w_784.jpg" alt="sea with sun picture"/>
+        </picture>
         <div class="rightSide">
             <div class="centerRightSide">
                 <h1>Lorem Ipsum</h1>
