Fetch data from endpoint- working

--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
                 <h2>Alert!</h2>
                 <p id="outputText"></p>
                 <button type="button" class="styledButton resetButton" id="resetClicks">Reset</button>
+                <table>
+                    <thead>
+                        <tr>
+                            <th scope="col">imie i nazwisko</th>
+                            <th scope="col">email</th>
+                            <th scope="col">adres</th>
+                            <th scope="col">telefon</th>
+                            <th scope="col">nazwa firmy</th>
+                        </tr>
+                    </thead>
+                    <tbody id="usersTable"></tbody>
+                </table>
             </div>
         </div>
     </section>
