Styled table + improved modal styles

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <label for="progressBar" id="progressBarLabel" style="display:none">Downloading content...</label>
                 <progress id="progressBar" style="display:none"></progress>
 
-                <table id="table" style="display:none">
+                <table id="table" class="table" style="display:none">
                     <thead>
                         <tr>
                             <th scope="col">imie i nazwisko</th>
